# Nav-One

./: .gitignore  CMakeLists.txt  README.md
docs/: HISTORY.md
src/: CMakeLists.txt  main.cpp
src/app/: DataSourceConfig.hpp  NavOneApp.cpp  NavOneApp.hpp  PluginManager.cpp  PluginManager.hpp
src/app/services/: ServiceManager.cpp  ServiceManager.hpp
src/core/: MessageBus.hpp  NavData.hpp  Simulator.cpp  Simulator.hpp  ThreadPool.cpp  ThreadPool.hpp
src/gui/: MainWindow.cpp  MainWindow.hpp
src/gui/windows/: AboutWindow.hpp  CommunicationSettingsWindow.cpp  CommunicationSettingsWindow.hpp  DashboardWindow.cpp  DashboardWindow.hpp  DisplaySettingsWindow.hpp  NmeaMonitorWindow.cpp  NmeaMonitorWindow.hpp  SimulatorWindow.hpp
src/network/: IService.hpp  SerialService.cpp  SerialService.hpp  SimulatorService.hpp  UdpSender.cpp  UdpSender.hpp  UdpService.cpp  UdpService.hpp
src/parsers/: NmeaParser.cpp  NmeaParser.hpp
src/plugin_api/: IPlugin.hpp
src/plugins/gps/: GpsPlugin.cpp
src/plugins/gps_big/: GpsBigPlugin.cpp
src/plugins/water/: WaterPlugin.cpp
src/plugins/wind/: WindPlugin.cpp
src/simulator/: AisSimulator.cpp  AisSimulator.hpp  BaseSimulator.cpp  BaseSimulator.hpp  GpsSimulator.cpp  GpsSimulator.hpp  ISimulator.hpp  SimulatorConfig.hpp  SimulatorDecorator.hpp  WaterSimulator.cpp  WaterSimulator.hpp  WindSimulator.cpp  WindSimulator.hpp
src/utils/: ConfigManager.cpp  ConfigManager.hpp  SerialPortUtils.cpp  SerialPortUtils.hpp
